docs/examples/empty_container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-shared-pod
  labels:
    app: ubuntu-shared
spec:
  securityContext:
    fsGroup: 0
  volumes:
    - name: tmp-shared
      emptyDir: {}
  containers:
    - name: ubuntu-container-1
      image: ubuntu:latest
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: tmp-shared
          mountPath: /tmp

    - name: ubuntu-container-2
      image: ubuntu:latest
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: tmp-shared
          mountPath: /tmp
      securityContext:
        capabilities:
          add: ["NET_RAW"]
